--- a/Libra/App.config
+++ b/Libra/App.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Libra.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Libra.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <userSettings>
         <Libra.Properties.Settings>
             <setting name="DefaultWallet" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="RequireConfirmations" serializeAs="String">
                 <value>True</value>
@@ -23,7 +23,7 @@
                 <value>https://api.sandbox.gemini.com</value>
             </setting>
             <setting name="RefreshRate" serializeAs="String">
-                <value>1</value>
+                <value>3</value>
             </setting>
         </Libra.Properties.Settings>
     </userSettings>
