Exception logging. Still need to fix TreeView for orders

--- a/Libra/App.config
+++ b/Libra/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <Libra.Properties.Settings>
             <setting name="DefaultWallet" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="RequireConfirmations" serializeAs="String">
                 <value>True</value>
@@ -22,8 +22,8 @@
             <setting name="ApiSandbox" serializeAs="String">
                 <value>https://api.sandbox.gemini.com</value>
             </setting>
-            <setting name="RefreshRate" serializeAs="String">
-                <value>3</value>
+            <setting name="DefaultLogFile" serializeAs="String">
+                <value>libra_log.txt</value>
             </setting>
         </Libra.Properties.Settings>
     </userSettings>
